--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="Ru-ru">
 
 <head>
   <meta charset="utf-8">
-  <title>FirestoreA</title>
-  <base href="./">
+  <meta name="description" content="Рабочий пример подключения Ангуляр.13 проекта к БД Firestore.>
+  <title>Angular + Firestore</title>
+
+  <base href=" ./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>Загрузка …</app-root>
 </body>
 
 </html>
